# blog-backend

./: .env  Blog.toml  Cargo.toml  Dockerfile  README.md  start.sh
.github/workflows/: build.yml
migrations/2021-01-28-080811_users/: up.sql
migrations/2021-02-24-151952_posts/: up.sql
migrations/2021-02-24-154832_posts_add_datetime/: up.sql
migrations/2021-02-24-155219_posts_add_modified_at/: up.sql
src/: config.rs  main.rs
src/api/: mod.rs
src/api/account_service/: errors.rs  mod.rs
src/api/blog_service/: errors.rs  mod.rs
src/db/: mod.rs  models.rs  schema.rs
src/middlewares/: postgresql.rs
