[package]
name = "blog-backend"
version = "0.1.0"
authors = ["Ace Kim <quickwshell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
env_logger = "0.8"
serde = "1"
serde_json = "1"
toml = "0.5"
lazy_static = "1.4"
diesel = { version = "1", features = ["postgres", "chrono"] }
sha3 = "0.9.1"
hex = "0.4.2"
jwt-simple = "0.2"
hmac = "0.10"
chrono = { version = "0.4.19", features = ["serde"] }